# Fractalkor

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  Main.cc
working/: build.bat
working/res/shader/: ComplexOps.glsl  Fractal.vs  FractalHelper.glsl  Julia.fs  Mandelbrot.fs
